--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <div id="loader-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
