--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>My Contacts</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
   </head>
